Fix Daily Auths Report plot to match table (#37)
* Push filtering logic "up" in daily-auths-report

* Update plot on daily-auths-report to separate by issuer

- issuer is unique, friendly_name is not
- add issuer to table outside of title, truncate it
- update plot title to have issuer

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -24,3 +24,13 @@
 .usa-form--full-width {
   @include u-width(full);
 }
+
+.max-width-300 {
+  max-width: 300px;
+}
+
+.truncate-ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
